--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
+    "docz:dev": "docz dev",
     "build": "postcss src/index.css -o dist/astro.css"
   },
   "dependencies": {
@@ -14,7 +15,8 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "cssnano": "^4.1.0",
-    "docz": "^0.11.2",
+    "docz": "^0.12.5",
+    "docz-plugin-css": "^0.11.0",
     "postcss-cli": "^6.0.0",
     "postcss-css-variables": "^0.9.0",
     "postcss-import": "^12.0.0"
