--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "ISC",
   "scripts": {
     "docz:dev": "docz dev",
-    "build": "postcss src/index.css -o dist/astro.css"
+    "build": "postcss src/index.css -o dist/astro.css",
+    "lint:css": "stylelint src/css/**/*.css"
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
@@ -19,6 +20,8 @@
     "docz-plugin-css": "^0.11.0",
     "postcss-cli": "^6.0.0",
     "postcss-css-variables": "^0.9.0",
-    "postcss-import": "^12.0.0"
+    "postcss-import": "^12.0.0",
+    "stylelint": "^9.6.0",
+    "stylelint-config-standard": "^18.2.0"
   }
 }
