--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "scripts": {
     "docz:dev": "docz dev",
     "docs:build": "docz build",
-    "docs:publish": "npm run-script docs:build && gh-pages --dist .docz/dist --message 'Update site [ci skip]'",
+    "docs:publish": "yarn run-script docs:build && gh-pages --dist .docz/dist --message 'Update site [ci skip]'",
     "build": "postcss src/index.css -o dist/astro.css",
     "lint:css": "stylelint src/css/**/*.css",
-    "ci:build": "npm run build && npm run lint:css"
+    "ci:build": "yarn run build && yarn run lint:css"
   },
   "dependencies": {
     "flexboxgrid": "^6.3.1",
@@ -32,11 +32,12 @@
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "cssnano": "^4.1.0",
-    "docz": "^0.12.16",
+    "docz": "^0.13.7",
     "docz-plugin-css": "^0.11.0",
+    "docz-theme-default": "^0.13.7",
     "gh-pages": "^2.0.1",
     "postcss-cli": "^6.0.0",
-    "postcss-css-variables": "^0.9.0",
+    "postcss-css-variables": "^0.11.0",
     "postcss-import": "^12.0.0",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0"
