--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "postcss-url": "^8.0.0",
     "stylelint": "^9.6.0",
     "stylelint-config-standard": "^18.2.0",
-    "svgo": "^1.1.1"
+    "svgo": "^1.1.1",
+    "text-mask-addons": "^3.8.0",
+    "vanilla-text-mask": "^5.1.1"
   }
 }
